apps/gateway/charts/templates/httproute.yml
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: root-o11y-https-redirect
spec:
  parentRefs:
    - name: o11y-gateway
      sectionName: root-http
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
